Made simple to do list app in rails

--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -9,6 +9,12 @@
   <p><i class="far fa-square"></i> This task is not completed! </p>
   <% end %>
 
+  <p><%= link_to "Edit Task", edit_path %></p>
+
+  <p><%= link_to "Back to List of Tasks", tasks_path %></p>
+
+
+
 
 
 
