--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,22 +1,20 @@
-<h1>My Tasks</h1>
 
+  <div class="container">
+    <h1>My Tasks</h1>
 
-  <% @tasks.each do |task| %>
-  <% if task.completed? %>
-  <p><i class="far fa-check-square"></i> <%= task.title %></p>
-  <% else %>
-  <p><i class="far fa-square"></i> <%= task.title %></p>
-  <% end %>
-  <% end %>
+      <% @tasks.each do |task| %>
+      <p><% if task.completed? %>
+        <i class="far fa-check-square"></i> <%= link_to task.title, task_path(task) %>
+      <% else %>
+        <i class="far fa-square"></i> <%= link_to task.title, task_path(task) %>
+      <% end %>
+      <%= link_to task_path(task),
+          method: :delete,
+          data: { confirm: "Are you sure you want to delete #{task.title}?" } do %>
+          <i class="fa fa-trash" aria-hidden="true"></i>
+          <% end %>
+        </p>
+      <% end %>
 
-
-
-
-
-<!--
-<form>
-<input type="checkbox" name="vehicle1" value="Bike"> I have a bike<br>
-<input type="checkbox" name="vehicle2" value="Car"> I have a car<br>
-<input type="checkbox" name="vehicle3" value="Boat" checked> I have a boat<br>
-</form> -->
-
+  <p><%= link_to "Create New Task", new_path %></p>
+</div>
